fixes #05, desktop margins and text-overflow addition

--- a/Sass/pages/_menus.scss
+++ b/Sass/pages/_menus.scss
@@ -42,8 +42,10 @@
       margin: -100px 180px 0 180px;
     }
 
-     @include media-md {
-      margin: -100px 260px 0 260px;
+    @include media-md {
+      @include responsive-margin;
+      min-width: 1100px;
+      margin-top: -100px;
     }
   }
 
@@ -115,15 +117,23 @@
   &__name {
     @include flexbox(column, normal, center);
     flex: 1;
+    overflow: hidden;
 
     h4 {
       padding-bottom: 0.4rem;
       font-size: 1.1rem;
       font-weight: 600;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
+
     p {
       font-size: 0.95rem;
       font-weight: 300;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
   }
 
@@ -131,6 +141,7 @@
     @include flexbox(row, flex-end, flex-end);
     transform: translateY(11px);
     font-weight: 700;
+    padding-left: 1.2rem;
   }
 
   &__check {
@@ -146,8 +157,6 @@
   @include media-sm {
     flex-basis: 100%;
   }
-
-  
 
   .btn {
     @include btn-gradient;
